--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <button type="submit" class="recommend">Enviar</button>
       </p>
     </form>
+
+    <div id="resp">
+      
+    </div>
   </div>
 
   <script type="text/javascript" src="assets/js/app.js"></script>
