--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Qual Operadora</title>
+  <title>QualOperadora</title>
+
+  <meta name="keywords" content="aplicação, firefox os, operadora, telefone, web app, nti faccat">
+  <meta name="description" content="Aplicação do FirefoxOS para descobrir qual é a operadora de um número de telefone.">
 
   <link rel="stylesheet" href="assets/css/style.css">
 
