changed phone to number type

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h1 class="app__name">Qual<span>Operadora</span></h1>
 
   <form id="main__form">
-    <input type="text" id="main__form-phone" placeholder="DDD + Número" required onkeyup="mascara( this, mtel );" maxlength="15">
+    <input type="number" id="main__form-phone" placeholder="DDD + Número" required maxlength="12">
 
     <button type="submit" id="main__form-submit">Consultar</button>
   </form>
