Update Gulp tasks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="aplicação, firefox os, operadora, telefone, web app, nti faccat">
   <meta name="description" content="Descubra qual é a operadora de um número de telefone.">
 
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.min.css">
 
 </head>
 <body class="body">
@@ -30,7 +30,7 @@
     <span id="not-found">Não encontramos nenhum registro</span>
   </div>
 
-  <script type="text/javascript" src="assets/js/app.js"></script>
+  <script type="text/javascript" src="assets/js/app.min.js"></script>
 
 </body>
 </html>
